--- a/index.html
+++ b/index.html
@@ -5,31 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Personal To-do-list</title>
 </head>
 <body>
-    <section class="content">
-        <div class="cont-left">
-            <div class="cont-left_info">
-                <button>Add</button>
-                <button>Edit</button>
-                <button>Delete</button>
-            </div>
-            <div class="cont-left_note">
-                oii
+    <div class="popup-box">
+        <div class="popup">
+            <div class="content">
+                <header>
+                    <p>Add new note</p>
+                    <i class="uil uil-times"></i>
+                </header>
+                <form action="#">
+                    <div class="row title">
+                        <label for="">Title</label>
+                        <input type="text">
+                    </div>
+                    <div class="row description">
+                        <label for="">Description</label>
+                        <textarea></textarea>
+                    </div>
+                    <button>Add Note</button>
+                </form>
             </div>
         </div>
+    </div>
+    <div class="screen">
+        <div class="wrapper">
+            <li class="add-box">
+                <div class="icon">
+                    <i class="uil uil-file-plus-alt"></i>
+                </div>
+            </li>
+        </div>
         <div class="cont-right">
-            <div>
+            <div class="to-do">
                 <h3>To-do</h3>
+                <span class="space"></span>
             </div>
-            <div>
+            <div class="doing">
                 <h3>Doing</h3>
             </div>
-            <div>
+            <div class="done">
                 <h3>Done</h3>
             </div>
         </div>
-    </section>
+    </div>
+   
+
+    <script src="script.js"></script>
 </body>
 </html>
